[package]
name = "image-to-terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
crossterm = "0.27.0"
image = "0.24.7"
itertools = "0.12.0"
lazy_static = "1.4.0"
ratatui = "0.24.0"
